# SPYDER_AutoTrace

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Run_Build.bat  TestReport_20260210_232917.html  output.txt
.github/workflows/: ci.yml
cmake/: AutoVersion.cmake  CodeFormatTargets.cmake  CompilerWarnings.cmake  Coverage.cmake  Deployment.cmake  Documentation.cmake  Doxyfile.in  EnvConfig.cmake  FetchDependencies.cmake  InstallRules.cmake  PackageManager.cmake  Packaging.cmake  PrecompiledHeaders.cmake  PreventInSourceBuilds.cmake  QmlSupport.cmake  Sanitizers.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  SuperBuild.cmake  env_config.h.in  version.h.in
resources/: resources.qrc  sample_tests.json
resources/dbc/: MIBCAN.dbc
resources/jsonTests/: MIB4_ManDiag.json
scripts/: QtTemplateDevCert.pfx  SignInstaller.ps1  qml_watcher.py
src/: CMakeLists.txt  main.cpp
src/CANManager/: CMakeLists.txt
src/CANManager/include/: CANInterface.h  CANManager.h  VectorCANDriver.h
src/CANManager/src/: CANManager.cpp  VectorCANDriver.cpp
src/DBCManager/: CMakeLists.txt
src/DBCManager/include/: DBCManager.h  DBCParser.h
src/DBCManager/src/: DBCManager.cpp  DBCParser.cpp
src/DockManager/: CMakeLists.txt
src/DockManager/include/: ActivityRail.h  CustomDockComponentsFactory.h  DockFramework.h  DockMainWindow.h  DockToolBar.h  FramelessTopBar.h  IconManager.h  PanelDefinition.h  PanelRegistry.h  WelcomePageWidget.h  WorkspaceManager.h
src/DockManager/src/: ActivityRail.cpp  CustomDockComponentsFactory.cpp  DockMainWindow.cpp  DockToolBar.cpp  FramelessTopBar.cpp  IconManager.cpp  PanelRegistry.cpp  WelcomePageWidget.cpp  WorkspaceManager.cpp
src/ManDiag/: CMakeLists.txt
src/ManDiag/include/: ManDiag.h  ManDiagEOL.h  ManDiagMOL.h  ManDiagProtocol.h
src/ManDiag/include/core/: ManDiagProtocol.h
src/ManDiag/include/protocols/ManDiagITS/: ManDiagITS.h
src/ManDiag/include/protocols/ManDiagMOL/: ManDiagMOL.h
src/ManDiag/include/protocols/ManDiagPITS/: ManDiagPITS.h
src/ManDiag/src/: ManDiagEOL.cpp  ManDiagMOL.cpp  ManDiagProtocol.cpp
src/ManDiag/src/core/: ManDiagProtocol.cpp
src/ManDiag/src/protocols/ManDiagITS/: ManDiagITS.cpp
src/ManDiag/src/protocols/ManDiagMOL/: ManDiagMOL.cpp
src/ManDiag/src/protocols/ManDiagPITS/: ManDiagPITS.cpp
src/SerialManager/: CMakeLists.txt
src/SerialManager/include/: SerialManager.h
src/SerialManager/src/: SerialManager.cpp
src/TestExecutor/: CMakeLists.txt
src/TestExecutor/include/: CommandRegistry.h  TestDataModels.h  TestEditorPanel.h  TestExecutorEngine.h  TestExecutorPanels.h  TestExplorerPanel.h  TestProgressPanel.h  TestReportGenerator.h  TestRepository.h
src/TestExecutor/src/: CommandRegistry.cpp  TestDataModels.cpp  TestEditorPanel.cpp  TestExecutorEngine.cpp  TestExecutorPanels.cpp  TestExplorerPanel.cpp  TestProgressPanel.cpp  TestReportGenerator.cpp  TestRepository.cpp
src/common/: HexUtils.h
src/panels/: CANConfigWidget.cpp  CANConfigWidget.h  HWConfigDialog.cpp  HWConfigDialog.h  HWConfigManager.cpp  HWConfigManager.h  SamplePanels.cpp  SamplePanels.h  SerialConfigWidget.cpp  SerialConfigWidget.h  TestTreeModel.cpp  TestTreeModel.h
src/styles/: CMakeLists.txt  README.md
src/styles/include/: PerformanceProxyStyle.h  ThemeCatalog.h  ThemeManager.h
src/styles/qss/: activity_rail.qss  application.qss  hw_config.qss  test_executor.qss  welcome_page.qss
src/styles/reporting/: test_report.css
src/styles/src/: PerformanceProxyStyle.cpp  ThemeCatalog.cpp  ThemeManager.cpp
support/Infotainment_Test_Automation/: requirements.txt  setup.py
support/Infotainment_Test_Automation/Test_Source/ManDiag_Regression/: README.md  config.ini  conftest.py  pytest.ini
support/Infotainment_Test_Automation/Test_Source/ManDiag_Regression/Project_Config/: EXP_project_setup.py  HPCC_project_setup.py  IHP_project_setup.py  MIB4_project_setup.py  SEM25_project_setup.py
support/Infotainment_Test_Automation/Test_Source/ManDiag_Regression/tests/EXP_tests/: test_01_basic_arithmetic.py  test_02_markers_and_groups.py  test_03_skip_xfail_order.py  test_04_class_based_tests.py  test_05_parametrized_and_fixture_demo.py
support/Infotainment_Test_Automation/Test_Source/ManDiag_Regression/tests/HPCC_MnM_Project_ManDiag/: RUN.bat
support/Infotainment_Test_Automation/Test_Source/ManDiag_Regression/tests/HPCC_MnM_Project_ManDiag/CyberSecurity/: test_0x6E02_0x6E03_CyberSec_UART_Lock_Unlock_features.py  test_0x6E05_CyberSec_JTAG_Lock_Unlock.py  test_0x6E21_CyberSec_Certificate_Provision.py  test_0x6E22_CyberSec_Certificate_DeProvision.py  test_0x6E52_CyberSec_Read_UID_Renesas.py  test_0x6E60_CyberSec_SecureBootStatus.py  test_0x6E61_CyberSec_JTAG_Status.py  test_0x6E64_0x6E65_CyberSec_DRM_Widevine_Provision.py
support/Infotainment_Test_Automation/Test_Source/ManDiag_Regression/tests/HPCC_MnM_Project_ManDiag/EOL_ParametersRead_For_MPI/: test_EOL_Parameters_Data_For_MPI_file.py
support/Infotainment_Test_Automation/Test_Source/ManDiag_Regression/tests/HPCC_MnM_Project_ManDiag/SystemConfig/: test_initial_SysReadiness_SysConfig.py
support/Infotainment_Test_Automation/Test_Source/ManDiag_Regression/tests/HPCC_MnM_Project_ManDiag/TCU/: test_0x5015_TCU_IMU_Malfunction.py  test_0x5016_TCU_eSIM_Malfunction.py  (+7 more)
support/Infotainment_Test_Automation/Test_Source/ManDiag_Regression/tests/MIB4_Project_ManDiag/: RUN.bat
support/Infotainment_Test_Automation/Test_Source/ManDiag_Regression/tests/SEM2.5_Project_ManDiag/: RUN.bat
support/Infotainment_Test_Automation/infotest/core/: base_serial.py  can_base.py  exception_handler.py  scpi_instruments.py  trace_logger.py  visa_base.py
support/Infotainment_Test_Automation/infotest/devices/: Keysight_34465A_DMM.py  io_controller.py  mandiag.py  mandiag_MOL.py  power_supply.py
support/Infotainment_Test_Automation/infotest/utilities/: util_can_helper.py  util_excel_report.py  util_keysight_34465A.py  util_man_diag.py
tests/: CMakeLists.txt  tst_CommandRegistry.cpp  tst_DBCParser.cpp  tst_HWConfigManager.cpp  tst_TestDataModels.cpp  tst_gtest_main.cpp  tst_qtest_main.cpp
(+99 files in other folders)
